@@ -256,6 +256,7 @@ public class GT6_Main extends Abstract_Mod {
 			for (FluidContainerData tData : FluidContainerRegistry.getRegisteredFluidContainerData()) if (tData.filledContainer.getItem() == Items.potionitem && ST.meta_(tData.filledContainer) == 0) {tData.fluid.amount = 0; break;}
 
 			ArrayListNoNulls<Runnable> tList = new ArrayListNoNulls<>(F,
+				new Loader_Achievements(),
 				new Loader_BlockResistance(),
 				new Loader_Fuels(),
 				new Loader_Loot(),
