@@ -1,0 +1,4 @@
+achievement.stone_anvil=Blacksmith Setup
+achievement.stone_anvil.desc=Craft any stone anvil
+achievement.ceramic_crucible="Melting" Topic
+achievement.ceramic_crucible.desc=Craft ceramic crucible
