@@ -1,0 +1,4 @@
+achievement.stone_anvil=铁匠入门
+achievement.stone_anvil.desc=制作任何石质砧
+achievement.ceramic_crucible="熔毁"话题
+achievement.ceramic_crucible.desc=制作陶瓷坩锅
